# Timetablegenerator

./: .env.example  .gitignore  .replit  package-lock.json  package.json  pyproject.toml  run_backend.sh  start_backend.sh  vite.config.ts
attached_assets/: Pasted-DAY-Venue-8-00-AM-9-00-AM-10-00-AM-11-00-AM-12-00-NOON-_1765186082842.txt  Third_Trimester_2025_Main_Campus_Teaching_Timetable_Version_2_1765186444354.xlsx
backend/: database.py  main.py  requirements.txt
backend/api/: routes.py
backend/demo_data/: Lecturers.csv  README.md  Units.csv  Venues.csv
backend/migrations_archive/: README.md  migrate_constraint_settings.py  migrate_max_lecturer_hours.py  migrate_settings.py  migrate_time_allocation.py
backend/models/: schemas.py
backend/sample_data/: lecturers.csv  units.csv  venues.csv
backend/services/: file_parser.py  timetable_solver.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/layout/: Shell.tsx
client/src/components/timetable/: TimetableGrid.tsx
client/src/lib/: api.ts  export.ts  mockData.ts
client/src/pages/: ConflictResolution.tsx  Dashboard.tsx  Generate.tsx  ScheduleView.tsx  Settings.tsx  UnitOverrides.tsx
docs/: DB_TEST_RESULTS.md  IMPLEMENTATION_PROGRESS.md  PROJECT_AUDIT.md  README.md  SETTINGS_PERSISTENCE.md  SOLVER_DOCS.md  TIME_ALLOCATION_SYSTEM.md  VERSION_MANAGEMENT.md
script/: dev-backend.mjs
server/: routes.ts
